crates/rtd/src/unit_tests/snapshots/sui__upgrade_compatibility__upgrade_compatibility_tests__struct.snap
---
source: crates/rtd/src/upgrade_compatibility/../unit_tests/upgrade_compatibility_tests.rs
expression: normalize_path(err.to_string())
---
error[Compatibility E01003]: ability mismatch
   ┌─ /fixtures/upgrade_errors/struct_errors_v2/sources/UpgradeErrors.move:10:19
   │
10 │     public struct AddExtraAbility has copy {} // added copy
   │                   ^^^^^^^^^^^^^^^ Unexpected ability: 'copy'
   │
   = Structs are part of a module's public interface and cannot be removed or changed during a 'compatible' upgrade.
   = Restore the original abilities of struct 'AddExtraAbility': none.

error[Compatibility E01003]: ability mismatch
   ┌─ /fixtures/upgrade_errors/struct_errors_v2/sources/UpgradeErrors.move:11:19
   │
11 │     public struct RemoveAbility has drop {} // removed copy
   │                   ^^^^^^^^^^^^^ Missing ability: 'copy'
   │
   = Structs are part of a module's public interface and cannot be removed or changed during a 'compatible' upgrade.
   = Restore the original abilities of struct 'RemoveAbility': 'copy' and 'drop'.

error[Compatibility E01003]: ability mismatch
   ┌─ /fixtures/upgrade_errors/struct_errors_v2/sources/UpgradeErrors.move:12:19
   │
12 │     public struct AddAndRemoveAbility has drop, store {} // remove copy, add store
   │                   ^^^^^^^^^^^^^^^^^^^ Mismatched abilities: missing 'copy', unexpected 'store'
   │
   = Structs are part of a module's public interface and cannot be removed or changed during a 'compatible' upgrade.
   = Restore the original abilities of struct 'AddAndRemoveAbility': 'copy' and 'drop'.

error[Compatibility E01003]: ability mismatch
   ┌─ /fixtures/upgrade_errors/struct_errors_v2/sources/UpgradeErrors.move:13:19
   │
13 │     public struct RemoveMultipleAbilities has drop {} // remove copy, store
   │                   ^^^^^^^^^^^^^^^^^^^^^^^ Missing abilities: 'copy' and 'store'
   │
   = Structs are part of a module's public interface and cannot be removed or changed during a 'compatible' upgrade.
   = Restore the original abilities of struct 'RemoveMultipleAbilities': 'copy', 'drop', and 'store'.

error[Compatibility E01003]: ability mismatch
   ┌─ /fixtures/upgrade_errors/struct_errors_v2/sources/UpgradeErrors.move:14:19
   │
14 │     public struct AddMultipleAbilities has drop, copy {}
   │                   ^^^^^^^^^^^^^^^^^^^^ Unexpected abilities: 'copy' and 'drop'
   │
   = Structs are part of a module's public interface and cannot be removed or changed during a 'compatible' upgrade.
   = Restore the original abilities of struct 'AddMultipleAbilities': none.

error[Compatibility E01002]: type mismatch
   ┌─ /fixtures/upgrade_errors/struct_errors_v2/sources/UpgradeErrors.move:18:19
   │
18 │     public struct AddFieldToEmpty {
   │                   ^^^^^^^^^^^^^^^ Incorrect number of fields: expected 0, found 1
   │
   = Structs are part of a module's public interface and cannot be removed or changed during an upgrade.
   = Restore the original struct's fields for struct 'AddFieldToEmpty' including the ordering.

error[Compatibility E01002]: type mismatch
   ┌─ /fixtures/upgrade_errors/struct_errors_v2/sources/UpgradeErrors.move:23:19
   │
23 │     public struct AddField {
   │                   ^^^^^^^^ Incorrect number of fields: expected 1, found 2
   │
   = Structs are part of a module's public interface and cannot be removed or changed during an upgrade.
   = Restore the original struct's field for struct 'AddField' including the ordering.

error[Compatibility E01002]: type mismatch
   ┌─ /fixtures/upgrade_errors/struct_errors_v2/sources/UpgradeErrors.move:29:19
   │
29 │     public struct RemoveOnlyField {
   │                   ^^^^^^^^^^^^^^^ Incorrect number of fields: expected 1, found 0
   │
   = Structs are part of a module's public interface and cannot be removed or changed during an upgrade.
   = Restore the original struct's field for struct 'RemoveOnlyField' including the ordering.

error[Compatibility E01002]: type mismatch
   ┌─ /fixtures/upgrade_errors/struct_errors_v2/sources/UpgradeErrors.move:34:19
   │
34 │     public struct RemoveField {
   │                   ^^^^^^^^^^^ Incorrect number of fields: expected 2, found 1
   │
   = Structs are part of a module's public interface and cannot be removed or changed during an upgrade.
   = Restore the original struct's fields for struct 'RemoveField' including the ordering.

error[Compatibility E01004]: field mismatch
   ┌─ /fixtures/upgrade_errors/struct_errors_v2/sources/UpgradeErrors.move:42:9
   │
40 │     public struct ChangeFieldName {
   │                   --------------- Struct definition
41 │         a: u64,
42 │         c: u64, // changed from b to c
   │         ^ Mismatched field 'c', expected 'b'.
   │
   = Structs are part of a module's public interface and cannot be removed or changed during an upgrade.
   = Restore the original struct's fields for struct 'ChangeFieldName' including the ordering.

error[Compatibility E01002]: type mismatch
   ┌─ /fixtures/upgrade_errors/struct_errors_v2/sources/UpgradeErrors.move:48:9
   │
46 │     public struct ChangeFieldType {
   │                   --------------- Struct definition
47 │         a: u64,
48 │         b: u32, // changed to u32
   │         ^ Mismatched field type 'u32', expected 'u64'.
   │
   = Structs are part of a module's public interface and cannot be removed or changed during an upgrade.
   = Restore the original struct's fields for struct 'ChangeFieldType' including the ordering.

error[Compatibility E01004]: field mismatch
   ┌─ /fixtures/upgrade_errors/struct_errors_v2/sources/UpgradeErrors.move:54:9
   │
52 │     public struct ChangeFieldNameAndType {
   │                   ---------------------- Struct definition
53 │         a: u64,
54 │         c: u32, // changed from b to c and u64 to u32
   │         ^ Mismatched field 'c: u32', expected 'b: u64'.
   │
   = Structs are part of a module's public interface and cannot be removed or changed during an upgrade.
   = Restore the original struct's fields for struct 'ChangeFieldNameAndType' including the ordering.

error[Compatibility E01002]: type mismatch
   ┌─ /fixtures/upgrade_errors/struct_errors_v2/sources/UpgradeErrors.move:58:19
   │
58 │     public struct EmptyPositionalAdd(u64) // removed the u64
   │                   ^^^^^^^^^^^^^^^^^^ Incorrect number of fields: expected 0, found 1
   │
   = Structs are part of a module's public interface and cannot be removed or changed during an upgrade.
   = Restore the original struct's fields for struct 'EmptyPositionalAdd' including the ordering.

error[Compatibility E01002]: type mismatch
   ┌─ /fixtures/upgrade_errors/struct_errors_v2/sources/UpgradeErrors.move:61:19
   │
61 │     public struct PositionalAdd(u64, u64, u64) // added a u64
   │                   ^^^^^^^^^^^^^ Incorrect number of fields: expected 2, found 3
   │
   = Structs are part of a module's public interface and cannot be removed or changed during an upgrade.
   = Restore the original struct's fields for struct 'PositionalAdd' including the ordering.

error[Compatibility E01002]: type mismatch
   ┌─ /fixtures/upgrade_errors/struct_errors_v2/sources/UpgradeErrors.move:64:19
   │
64 │     public struct PositionalRemove(u64, u64) // removed a u64
   │                   ^^^^^^^^^^^^^^^^ Incorrect number of fields: expected 3, found 2
   │
   = Structs are part of a module's public interface and cannot be removed or changed during an upgrade.
   = Restore the original struct's fields for struct 'PositionalRemove' including the ordering.

error[Compatibility E01002]: type mismatch
   ┌─ /fixtures/upgrade_errors/struct_errors_v2/sources/UpgradeErrors.move:67:41
   │
67 │     public struct PositionalChange(u32, u64) // changed second u32 to u64
   │                   ----------------      ^^^ Mismatched field type 'u64', expected 'u32'.
   │                   │                      
   │                   Struct definition
   │
   = Structs are part of a module's public interface and cannot be removed or changed during an upgrade.
   = Restore the original struct's fields for struct 'PositionalChange' including the ordering.

error[Compatibility E01002]: type mismatch
   ┌─ /fixtures/upgrade_errors/struct_errors_v2/sources/UpgradeErrors.move:70:19
   │
70 │     public struct PositionalAddNamed{ a: u64 } // changed to named from empty positional
   │                   ^^^^^^^^^^^^^^^^^^ Incorrect number of fields: expected 0, found 1
   │
   = Structs are part of a module's public interface and cannot be removed or changed during an upgrade.
   = Restore the original struct's fields for struct 'PositionalAddNamed' including the ordering.

error[Compatibility E01004]: field mismatch
   ┌─ /fixtures/upgrade_errors/struct_errors_v2/sources/UpgradeErrors.move:73:38
   │
73 │     public struct PositionalToNamed{ a: u64 } // changed to named from positional
   │                   -----------------  ^ Mismatched field 'a', expected a positional field.
   │                   │                   
   │                   Struct definition
   │
   = Structs are part of a module's public interface and cannot be removed or changed during an upgrade.
   = Restore the original struct's field for struct 'PositionalToNamed' including the ordering.

error[Compatibility E01004]: field mismatch
   ┌─ /fixtures/upgrade_errors/struct_errors_v2/sources/UpgradeErrors.move:76:51
   │
76 │     public struct PositionalToNamedAndChangeType{ a: u64 } // changed to named from positional and changed type to u64
   │                   ------------------------------  ^ Mismatched field 'a: u64', expected 'u32' at position 0.
   │                   │                                
   │                   Struct definition
   │
   = Structs are part of a module's public interface and cannot be removed or changed during an upgrade.
   = Restore the original struct's field for struct 'PositionalToNamedAndChangeType' including the ordering.

error[Compatibility E01002]: type mismatch
   ┌─ /fixtures/upgrade_errors/struct_errors_v2/sources/UpgradeErrors.move:87:43
   │
87 │     public struct ChangePositionalStruct (ChangeFieldB) // changed to ChangeFieldB
   │                   ----------------------  ^^^^^^^^^^^^ Mismatched field type '0x0::upgrades::ChangeFieldB', expected '0x0::upgrades::ChangeFieldA'.
   │                   │                        
   │                   Struct definition
   │
   = Structs are part of a module's public interface and cannot be removed or changed during an upgrade.
   = Restore the original struct's field for struct 'ChangePositionalStruct' including the ordering.

error[Compatibility E01002]: type mismatch
   ┌─ /fixtures/upgrade_errors/struct_errors_v2/sources/UpgradeErrors.move:91:9
   │
90 │     public struct ChangeNameNestedStruct {
   │                   ---------------------- Struct definition
91 │         a: ChangeFieldB, // changed to ChangeFieldB
   │         ^ Mismatched field type '0x0::upgrades::ChangeFieldB', expected '0x0::upgrades::ChangeFieldA'.
   │
   = Structs are part of a module's public interface and cannot be removed or changed during an upgrade.
   = Restore the original struct's field for struct 'ChangeNameNestedStruct' including the ordering.

error[Compatibility E01002]: type mismatch
   ┌─ /fixtures/upgrade_errors/struct_errors_v2/sources/UpgradeErrors.move:95:33
   │
95 │     public struct NamedBox<A> { x: u32 }
   │                   --------      ^ Mismatched field type 'u32', expected 'A'.
   │                   │              
   │                   Struct definition
   │
   = Structs are part of a module's public interface and cannot be removed or changed during an upgrade.
   = Restore the original struct's field for struct 'NamedBox' including the ordering.

error[Compatibility E01002]: type mismatch
   ┌─ /fixtures/upgrade_errors/struct_errors_v2/sources/UpgradeErrors.move:96:39
   │
96 │     public struct NamedTwoBox<B, C> { x: u32, y: u32 }
   │                   -----------         ^ Mismatched field type 'u32', expected 'B'.
   │                   │                    
   │                   Struct definition
   │
   = Structs are part of a module's public interface and cannot be removed or changed during an upgrade.
   = Restore the original struct's fields for struct 'NamedTwoBox' including the ordering.

error[Compatibility E01002]: type mismatch
   ┌─ /fixtures/upgrade_errors/struct_errors_v2/sources/UpgradeErrors.move:96:47
   │
96 │     public struct NamedTwoBox<B, C> { x: u32, y: u32 }
   │                   -----------                 ^ Mismatched field type 'u32', expected 'C'.
   │                   │                            
   │                   Struct definition
   │
   = Structs are part of a module's public interface and cannot be removed or changed during an upgrade.
   = Restore the original struct's fields for struct 'NamedTwoBox' including the ordering.

error[Compatibility E01002]: type mismatch
   ┌─ /fixtures/upgrade_errors/struct_errors_v2/sources/UpgradeErrors.move:98:38
   │
98 │     public struct NamedBoxInBox<D> { x: u32 }
   │                   -------------      ^ Mismatched field type 'u32', expected '0x0::upgrades::NamedBox<0x0::upgrades::NamedBox<D>>'.
   │                   │                   
   │                   Struct definition
   │
   = Structs are part of a module's public interface and cannot be removed or changed during an upgrade.
   = Restore the original struct's field for struct 'NamedBoxInBox' including the ordering.

error[Compatibility E01002]: type mismatch
   ┌─ /fixtures/upgrade_errors/struct_errors_v2/sources/UpgradeErrors.move:99:44
   │
99 │     public struct NamedBoxInTwoBox<E, F> { x: u32 }
   │                   ----------------         ^ Mismatched field type 'u32', expected '0x0::upgrades::NamedTwoBox<0x0::upgrades::NamedBox<E>, 0x0::upgrades::NamedBox<F>>'.
   │                   │                         
   │                   Struct definition
   │
   = Structs are part of a module's public interface and cannot be removed or changed during an upgrade.
   = Restore the original struct's field for struct 'NamedBoxInTwoBox' including the ordering.

error[Compatibility E01002]: type mismatch
    ┌─ /fixtures/upgrade_errors/struct_errors_v2/sources/UpgradeErrors.move:101:36
    │
101 │     public struct PositionalBox<G>(u32)
    │                   -------------    ^^^ Mismatched field type 'u32', expected 'G'.
    │                   │                 
    │                   Struct definition
    │
    = Structs are part of a module's public interface and cannot be removed or changed during an upgrade.
    = Restore the original struct's field for struct 'PositionalBox' including the ordering.

error[Compatibility E01002]: type mismatch
    ┌─ /fixtures/upgrade_errors/struct_errors_v2/sources/UpgradeErrors.move:102:42
    │
102 │     public struct PositionalTwoBox<H, I>(u32, u32)
    │                   ----------------       ^^^ Mismatched field type 'u32', expected 'H'.
    │                   │                       
    │                   Struct definition
    │
    = Structs are part of a module's public interface and cannot be removed or changed during an upgrade.
    = Restore the original struct's fields for struct 'PositionalTwoBox' including the ordering.

error[Compatibility E01002]: type mismatch
    ┌─ /fixtures/upgrade_errors/struct_errors_v2/sources/UpgradeErrors.move:102:47
    │
102 │     public struct PositionalTwoBox<H, I>(u32, u32)
    │                   ----------------            ^^^ Mismatched field type 'u32', expected 'I'.
    │                   │                            
    │                   Struct definition
    │
    = Structs are part of a module's public interface and cannot be removed or changed during an upgrade.
    = Restore the original struct's fields for struct 'PositionalTwoBox' including the ordering.

error[Compatibility E01002]: type mismatch
    ┌─ /fixtures/upgrade_errors/struct_errors_v2/sources/UpgradeErrors.move:104:41
    │
104 │     public struct PositionalBoxInBox<J>(u32)
    │                   ------------------    ^^^ Mismatched field type 'u32', expected '0x0::upgrades::PositionalBox<0x0::upgrades::PositionalBox<J>>'.
    │                   │                      
    │                   Struct definition
    │
    = Structs are part of a module's public interface and cannot be removed or changed during an upgrade.
    = Restore the original struct's field for struct 'PositionalBoxInBox' including the ordering.

error[Compatibility E01002]: type mismatch
    ┌─ /fixtures/upgrade_errors/struct_errors_v2/sources/UpgradeErrors.move:105:47
    │
105 │     public struct PositionalBoxInTwoBox<K, L>(u32)
    │                   ---------------------       ^^^ Mismatched field type 'u32', expected '0x0::upgrades::PositionalTwoBox<0x0::upgrades::PositionalBox<K>, 0x0::upgrades::PositionalBox<L>>'.
    │                   │                            
    │                   Struct definition
    │
    = Structs are part of a module's public interface and cannot be removed or changed during an upgrade.
    = Restore the original struct's field for struct 'PositionalBoxInTwoBox' including the ordering.


Upgrade failed, this package requires changes to be compatible with the existing package. Its upgrade policy is set to 'compatible'. Use --skip-verify-compatibility to bypass this check locally.
